changed some data output stuff

--- a/D3D12Demo/data1.tex
+++ b/D3D12Demo/data1.tex
@@ -1,183 +1,93 @@
 % Timestamps with max frame latency: 1
 
 
-% CPU frame: 1000
-\addplot[geomStyle0] coordinates{ (703.659423,0.9) (706.340891,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (706.432971,0.9) (706.447047,0.9) }; 
-\addplot[presStyle0] coordinates{ (706.723287,0.9) (706.736190,0.9) }; 
-% GPU frame: 1000
-\addplot[geomStyle0] coordinates{ (706.455488,1.75) (706.642176,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (706.717184,2) (706.718016,2) }; 
-\addplot[presStyle0] coordinates{ (706.859040,1.75) (706.882656,1.75) }; 
+% CPU frame: 1
+\addplot[geomStyleZero] coordinates{ (32.411036,0.9) (38.546096,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (38.744918,0.9) (39.147842,0.9) }; 
+\addplot[presStyleZero] coordinates{ (60.070268,0.9) (60.098127,0.9) }; 
+% GPU frame: 1
+\addplot[geomStyleZero] coordinates{ (38.786080,1.75) (59.881984,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (60.040064,2) (60.140736,2) }; 
+\addplot[presStyleZero] coordinates{ (60.228480,1.75) (60.252416,1.75) }; 
 
-% CPU frame: 1001
-\addplot[geomStyle1] coordinates{ (707.005099,1.0) (707.382804,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (707.442333,1.0) (707.454943,1.0) }; 
-\addplot[presStyle1] coordinates{ (707.706257,1.0) (707.718867,1.0) }; 
-% GPU frame: 1001
-\addplot[geomStyle1] coordinates{ (707.441504,1.75) (707.626944,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (707.702208,2) (707.703040,2) }; 
-\addplot[presStyle1] coordinates{ (707.843904,1.75) (707.866784,1.75) }; 
+% CPU frame: 2
+\addplot[geomStyleOne] coordinates{ (60.569085,1.0) (61.317456,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (61.411589,1.0) (61.872869,1.0) }; 
+\addplot[presStyleOne] coordinates{ (83.489415,1.0) (83.529883,1.0) }; 
+% GPU frame: 2
+\addplot[geomStyleOne] coordinates{ (61.462112,1.75) (83.275488,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (83.524672,2) (83.626464,2) }; 
+\addplot[presStyleOne] coordinates{ (83.828512,1.75) (83.852768,1.75) }; 
 
-% CPU frame: 1002
-\addplot[geomStyle2] coordinates{ (707.976633,1.1) (708.308590,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (708.373105,1.1) (708.385128,1.1) }; 
-\addplot[presStyle2] coordinates{ (708.635270,1.1) (708.647586,1.1) }; 
-% GPU frame: 1002
-\addplot[geomStyle2] coordinates{ (708.372256,1.75) (708.558592,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (708.667648,2) (708.668512,2) }; 
-\addplot[presStyle2] coordinates{ (708.810432,1.75) (708.833888,1.75) }; 
+% CPU frame: 3
+\addplot[geomStyleTwo] coordinates{ (84.162128,1.1) (84.814900,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (84.910792,1.1) (85.348906,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (105.768117,1.1) (105.921486,1.1) }; 
+% GPU frame: 3
+\addplot[geomStyleTwo] coordinates{ (84.964672,1.75) (105.547424,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (105.720928,2) (105.821984,2) }; 
+\addplot[presStyleTwo] coordinates{ (105.998016,1.75) (106.021920,1.75) }; 
 
-% CPU frame: 1003
-\addplot[geomStyle0] coordinates{ (708.947580,0.9) (709.283643,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (709.361354,0.9) (709.377776,0.9) }; 
-\addplot[presStyle0] coordinates{ (709.620879,0.9) (709.635542,0.9) }; 
-% GPU frame: 1003
-\addplot[geomStyle0] coordinates{ (709.349760,1.75) (709.535520,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (709.617792,2) (709.618752,2) }; 
-\addplot[presStyle0] coordinates{ (709.770432,1.75) (709.793536,1.75) }; 
+% CPU frame: 4
+\addplot[geomStyleZero] coordinates{ (106.387752,0.9) (107.037885,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (107.142574,0.9) (107.531716,0.9) }; 
+\addplot[presStyleZero] coordinates{ (127.827762,0.9) (127.868817,0.9) }; 
+% GPU frame: 4
+\addplot[geomStyleZero] coordinates{ (107.120736,1.75) (127.621920,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (127.835136,2) (127.936512,2) }; 
+\addplot[presStyleZero] coordinates{ (128.037952,1.75) (128.063904,1.75) }; 
 
-% CPU frame: 1004
-\addplot[geomStyle1] coordinates{ (709.945506,1.0) (710.296524,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (710.367197,1.0) (710.383033,1.0) }; 
-\addplot[presStyle1] coordinates{ (710.629069,1.0) (710.641972,1.0) }; 
-% GPU frame: 1004
-\addplot[geomStyle1] coordinates{ (710.363936,1.75) (710.549536,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (710.627168,2) (710.628032,2) }; 
-\addplot[presStyle1] coordinates{ (710.785696,1.75) (710.809024,1.75) }; 
+% CPU frame: 5
+\addplot[geomStyleOne] coordinates{ (128.357663,1.0) (129.055302,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (129.152954,1.0) (129.500747,1.0) }; 
+\addplot[presStyleOne] coordinates{ (150.514960,1.0) (150.543405,1.0) }; 
+% GPU frame: 5
+\addplot[geomStyleOne] coordinates{ (129.213728,1.75) (150.341696,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (150.477024,2) (150.578080,2) }; 
+\addplot[presStyleOne] coordinates{ (150.660096,1.75) (150.684576,1.75) }; 
 
-% CPU frame: 1005
-\addplot[geomStyle2] coordinates{ (711.041377,1.1) (711.448992,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (711.533448,1.1) (711.550750,1.1) }; 
-\addplot[presStyle2] coordinates{ (711.890039,1.1) (711.907927,1.1) }; 
-% GPU frame: 1005
-\addplot[geomStyle2] coordinates{ (711.587456,1.75) (711.779168,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (711.963264,2) (711.964128,2) }; 
-\addplot[presStyle2] coordinates{ (712.197344,1.75) (712.220864,1.75) }; 
+% CPU frame: 6
+\addplot[geomStyleTwo] coordinates{ (150.926388,1.1) (151.500276,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (151.577987,1.1) (151.929299,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (172.276957,1.1) (172.318305,1.1) }; 
+% GPU frame: 6
+\addplot[geomStyleTwo] coordinates{ (151.568768,1.75) (172.063040,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (172.229120,2) (172.329408,2) }; 
+\addplot[presStyleTwo] coordinates{ (172.437888,1.75) (172.461888,1.75) }; 
 
-% CPU frame: 1006
-\addplot[geomStyle0] coordinates{ (712.346920,0.9) (712.802043,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (712.891484,0.9) (712.909665,0.9) }; 
-\addplot[presStyle0] coordinates{ (713.162152,0.9) (713.180040,0.9) }; 
-% GPU frame: 1006
-\addplot[geomStyle0] coordinates{ (712.877696,1.75) (713.063840,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (713.150464,2) (713.151328,2) }; 
-\addplot[presStyle0] coordinates{ (713.306784,1.75) (713.329856,1.75) }; 
+% CPU frame: 7
+\addplot[geomStyleZero] coordinates{ (172.753193,0.9) (173.350541,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (173.445554,0.9) (176.261329,0.9) }; 
+\addplot[presStyleZero] coordinates{ (192.836048,0.9) (192.864786,0.9) }; 
+% GPU frame: 7
+\addplot[geomStyleZero] coordinates{ (173.429664,1.75) (192.667264,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (192.802880,2) (192.895616,2) }; 
+\addplot[presStyleZero] coordinates{ (192.978912,1.75) (193.002656,1.75) }; 
 
-% CPU frame: 1007
-\addplot[geomStyle1] coordinates{ (713.492937,1.0) (713.875333,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (713.951285,1.0) (713.967707,1.0) }; 
-\addplot[presStyle1] coordinates{ (714.229578,1.0) (714.244827,1.0) }; 
-% GPU frame: 1007
-\addplot[geomStyle1] coordinates{ (713.948320,1.75) (714.134720,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (714.227776,2) (714.228640,2) }; 
-\addplot[presStyle1] coordinates{ (714.381984,1.75) (714.405248,1.75) }; 
+% CPU frame: 8
+\addplot[geomStyleOne] coordinates{ (193.241318,1.0) (193.789400,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (193.884706,1.0) (194.311676,1.0) }; 
+\addplot[presStyleOne] coordinates{ (213.584870,1.0) (213.623286,1.0) }; 
+% GPU frame: 8
+\addplot[geomStyleOne] coordinates{ (193.867136,1.75) (213.388224,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (213.607488,2) (213.701024,2) }; 
+\addplot[presStyleOne] coordinates{ (213.808928,1.75) (213.832672,1.75) }; 
 
-% CPU frame: 1008
-\addplot[geomStyle2] coordinates{ (714.551859,1.1) (715.006101,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (715.090850,1.1) (715.108445,1.1) }; 
-\addplot[presStyle2] coordinates{ (715.365624,1.1) (715.382926,1.1) }; 
-% GPU frame: 1008
-\addplot[geomStyle2] coordinates{ (715.078272,1.75) (715.264832,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (715.355744,2) (715.356736,2) }; 
-\addplot[presStyle2] coordinates{ (715.511168,1.75) (715.534240,1.75) }; 
+% CPU frame: 9
+\addplot[geomStyleTwo] coordinates{ (214.182218,1.1) (214.792763,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (214.896279,1.1) (215.259908,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (234.252463,1.1) (234.293225,1.1) }; 
+% GPU frame: 9
+\addplot[geomStyleTwo] coordinates{ (214.879488,1.75) (234.047488,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (234.196416,2) (234.290112,2) }; 
+\addplot[presStyleTwo] coordinates{ (234.386304,1.75) (234.410528,1.75) }; 
 
-% CPU frame: 1009
-\addplot[geomStyle0] coordinates{ (715.688784,0.9) (716.120153,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (716.196985,0.9) (716.212234,0.9) }; 
-\addplot[presStyle0] coordinates{ (716.470586,0.9) (716.490233,0.9) }; 
-% GPU frame: 1009
-\addplot[geomStyle0] coordinates{ (716.195744,1.75) (716.383328,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (716.463328,2) (716.464224,2) }; 
-\addplot[presStyle0] coordinates{ (716.609088,1.75) (716.632064,1.75) }; 
-
-% CPU frame: 1010
-\addplot[geomStyle1] coordinates{ (716.777324,1.0) (716.804303,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (716.883480,1.0) (716.898729,1.0) }; 
-\addplot[presStyle1] coordinates{ (717.155908,1.0) (717.169984,1.0) }; 
-% GPU frame: 1010
-\addplot[geomStyle1] coordinates{ (716.876992,1.75) (717.064384,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (717.151200,2) (717.225056,2) }; 
-\addplot[presStyle1] coordinates{ (717.297408,1.75) (717.320480,1.75) }; 
-
-% CPU frame: 1011
-\addplot[geomStyle2] coordinates{ (717.458541,1.1) (717.484054,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (717.559126,1.1) (717.574081,1.1) }; 
-\addplot[presStyle2] coordinates{ (717.833606,1.1) (717.849442,1.1) }; 
-% GPU frame: 1011
-\addplot[geomStyle2] coordinates{ (717.554208,1.75) (717.741728,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (717.823520,2) (717.896608,2) }; 
-\addplot[presStyle2] coordinates{ (717.973120,1.75) (717.996480,1.75) }; 
-
-% CPU frame: 1012
-\addplot[geomStyle0] coordinates{ (718.147676,0.9) (718.172016,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (718.240343,0.9) (718.253539,0.9) }; 
-\addplot[presStyle0] coordinates{ (718.508665,0.9) (718.521862,0.9) }; 
-% GPU frame: 1012
-\addplot[geomStyle0] coordinates{ (718.240384,1.75) (718.427392,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (718.503008,2) (718.576320,2) }; 
-\addplot[presStyle0] coordinates{ (718.643712,1.75) (718.666464,1.75) }; 
-
-% CPU frame: 1013
-\addplot[geomStyle1] coordinates{ (718.858218,1.0) (718.880505,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (718.947072,1.0) (718.960269,1.0) }; 
-\addplot[presStyle1] coordinates{ (719.205718,1.0) (719.218034,1.0) }; 
-% GPU frame: 1013
-\addplot[geomStyle1] coordinates{ (718.944640,1.75) (719.131744,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (719.203488,2) (719.276416,2) }; 
-\addplot[presStyle1] coordinates{ (719.341440,1.75) (719.364352,1.75) }; 
-
-% CPU frame: 1014
-\addplot[geomStyle2] coordinates{ (719.546180,1.1) (719.568173,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (719.634741,1.1) (719.647057,1.1) }; 
-\addplot[presStyle2] coordinates{ (719.892507,1.1) (719.904530,1.1) }; 
-% GPU frame: 1014
-\addplot[geomStyle2] coordinates{ (719.631584,1.75) (719.819872,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (719.890304,2) (719.963616,2) }; 
-\addplot[presStyle2] coordinates{ (720.037824,1.75) (720.060928,1.75) }; 
-
-% CPU frame: 1015
-\addplot[geomStyle0] coordinates{ (720.183996,0.9) (720.204817,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (720.275196,0.9) (720.287806,0.9) }; 
-\addplot[presStyle0] coordinates{ (720.522992,0.9) (720.534722,0.9) }; 
-% GPU frame: 1015
-\addplot[geomStyle0] coordinates{ (720.267776,1.75) (720.454432,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (720.523840,2) (720.597600,2) }; 
-\addplot[presStyle0] coordinates{ (720.661792,1.75) (720.684896,1.75) }; 
-
-% CPU frame: 1016
-\addplot[geomStyle1] coordinates{ (720.860814,1.0) (720.880169,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (720.946150,1.0) (720.958173,1.0) }; 
-\addplot[presStyle1] coordinates{ (721.197171,1.0) (721.208608,1.0) }; 
-% GPU frame: 1016
-\addplot[geomStyle1] coordinates{ (720.941280,1.75) (721.127424,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (721.193024,2) (721.265792,2) }; 
-\addplot[presStyle1] coordinates{ (721.329152,1.75) (721.352448,1.75) }; 
-
-% CPU frame: 1017
-\addplot[geomStyle2] coordinates{ (721.528542,1.1) (721.547310,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (721.607719,1.1) (721.619156,1.1) }; 
-\addplot[presStyle2] coordinates{ (721.866071,1.1) (721.877508,1.1) }; 
-% GPU frame: 1017
-\addplot[geomStyle2] coordinates{ (721.609536,1.75) (721.796832,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (721.865184,2) (721.938656,2) }; 
-\addplot[presStyle2] coordinates{ (722.003584,1.75) (722.026592,1.75) }; 
-
-% CPU frame: 1018
-\addplot[geomStyle0] coordinates{ (722.158147,0.9) (722.179555,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (722.246122,0.9) (722.259318,0.9) }; 
-\addplot[presStyle0] coordinates{ (722.505940,0.9) (722.519723,0.9) }; 
-% GPU frame: 1018
-\addplot[geomStyle0] coordinates{ (722.241120,1.75) (722.429120,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (722.500896,2) (722.574208,2) }; 
-\addplot[presStyle0] coordinates{ (722.638432,1.75) (722.661856,1.75) }; 
-
-% CPU frame: 1019
-\addplot[geomStyle1] coordinates{ (722.827048,1.0) (722.847869,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (722.912090,1.0) (722.924407,1.0) }; 
-\addplot[presStyle1] coordinates{ (723.168096,1.0) (723.179826,1.0) }; 
-% GPU frame: 1019
-\addplot[geomStyle1] coordinates{ (722.910048,1.75) (723.097408,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (723.167296,2) (723.240832,2) }; 
-\addplot[presStyle1] coordinates{ (723.304960,1.75) (723.327680,1.75) }; 
+% CPU frame: 10
+\addplot[geomStyleZero] coordinates{ (234.657440,0.9) (235.269157,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (235.363583,0.9) (235.390855,0.9) }; 
+\addplot[presStyleZero] coordinates{ (254.686630,0.9) (254.713609,0.9) }; 
+% GPU frame: 10
+\addplot[geomStyleZero] coordinates{ (235.349344,1.75) (254.533024,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (254.653632,2) (254.654496,2) }; 
+\addplot[presStyleZero] coordinates{ (254.819616,1.75) (254.843616,1.75) }; 
 
