--- a/D3D12Demo/data2.tex
+++ b/D3D12Demo/data2.tex
@@ -1,183 +1,93 @@
 % Timestamps with max frame latency: 2
 
 
-% CPU frame: 1000
-\addplot[geomStyle0] coordinates{ (455.532770,0.9) (458.667307,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (458.821556,0.9) (458.844723,0.9) }; 
-\addplot[presStyle0] coordinates{ (459.108647,0.9) (459.125362,0.9) }; 
-% GPU frame: 1000
-\addplot[geomStyle0] coordinates{ (458.799296,1.75) (458.985504,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (459.092544,2) (459.093344,2) }; 
-\addplot[presStyle0] coordinates{ (459.365024,1.75) (459.387040,1.75) }; 
+% CPU frame: 1
+\addplot[geomStyleZero] coordinates{ (6.472882,0.9) (19.123931,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (19.674359,0.9) (20.099276,0.9) }; 
+\addplot[presStyleZero] coordinates{ (48.565529,0.9) (48.585177,0.9) }; 
+% GPU frame: 1
+\addplot[geomStyleZero] coordinates{ (25.682080,1.75) (47.736000,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (47.914432,2) (48.016320,2) }; 
+\addplot[presStyleZero] coordinates{ (70.532160,1.75) (70.553920,1.75) }; 
 
-% CPU frame: 1001
-\addplot[geomStyle1] coordinates{ (458.844136,1.0) (459.342659,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (459.503946,1.0) (459.519488,1.0) }; 
-\addplot[presStyle1] coordinates{ (459.784879,1.0) (459.807165,1.0) }; 
-% GPU frame: 1001
-\addplot[geomStyle1] coordinates{ (459.487392,1.75) (459.675552,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (459.923936,2) (459.924992,2) }; 
-\addplot[presStyle1] coordinates{ (460.217568,1.75) (460.240480,1.75) }; 
+% CPU frame: 2
+\addplot[geomStyleOne] coordinates{ (47.943842,1.0) (48.502774,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (48.602772,1.0) (48.976664,1.0) }; 
+\addplot[presStyleOne] coordinates{ (70.712856,1.0) (70.738662,1.0) }; 
+% GPU frame: 2
+\addplot[geomStyleOne] coordinates{ (48.585728,1.75) (70.508480,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (70.741760,2) (70.842624,2) }; 
+\addplot[presStyleOne] coordinates{ (70.993504,1.75) (71.017600,1.75) }; 
 
-% CPU frame: 1002
-\addplot[geomStyle2] coordinates{ (459.524180,1.1) (459.903938,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (459.967573,1.1) (459.980475,1.1) }; 
-\addplot[presStyle2] coordinates{ (460.343518,1.1) (460.363752,1.1) }; 
-% GPU frame: 1002
-\addplot[geomStyle2] coordinates{ (460.007456,1.75) (460.198848,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (460.333920,2) (460.407392,2) }; 
-\addplot[presStyle2] coordinates{ (460.491008,1.75) (460.513824,1.75) }; 
+% CPU frame: 3
+\addplot[geomStyleTwo] coordinates{ (70.704645,1.1) (71.316069,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (71.415773,1.1) (71.779109,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (92.414151,1.1) (92.442889,1.1) }; 
+% GPU frame: 3
+\addplot[geomStyleTwo] coordinates{ (71.399424,1.75) (92.236736,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (92.379008,2) (92.549216,2) }; 
+\addplot[presStyleTwo] coordinates{ (112.901728,1.75) (112.924512,1.75) }; 
 
-% CPU frame: 1003
-\addplot[geomStyle0] coordinates{ (460.326509,0.9) (460.724448,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (460.799520,0.9) (460.813302,0.9) }; 
-\addplot[presStyle0] coordinates{ (461.075467,0.9) (461.091302,0.9) }; 
-% GPU frame: 1003
-\addplot[geomStyle0] coordinates{ (460.789984,1.75) (460.976928,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (461.231264,2) (461.232608,2) }; 
-\addplot[presStyle0] coordinates{ (461.524704,1.75) (461.548032,1.75) }; 
+% CPU frame: 4
+\addplot[geomStyleZero] coordinates{ (71.443339,0.9) (72.154760,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (72.232178,0.9) (72.674984,0.9) }; 
+\addplot[presStyleZero] coordinates{ (113.082037,0.9) (113.122505,0.9) }; 
+% GPU frame: 4
+\addplot[geomStyleZero] coordinates{ (92.262080,1.75) (112.881024,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (113.020256,2) (113.114176,2) }; 
+\addplot[presStyleZero] coordinates{ (113.210144,1.75) (113.233824,1.75) }; 
 
-% CPU frame: 1004
-\addplot[geomStyle1] coordinates{ (460.815648,1.0) (461.214467,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (461.298922,1.0) (461.315638,1.0) }; 
-\addplot[presStyle1] coordinates{ (461.608300,1.0) (461.624722,1.0) }; 
-% GPU frame: 1004
-\addplot[geomStyle1] coordinates{ (461.314816,1.75) (461.505344,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (461.596128,2) (461.669856,2) }; 
-\addplot[presStyle1] coordinates{ (461.757536,1.75) (461.780448,1.75) }; 
+% CPU frame: 5
+\addplot[geomStyleOne] coordinates{ (113.101391,1.0) (113.788180,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (113.887591,1.0) (114.304005,1.0) }; 
+\addplot[presStyleOne] coordinates{ (133.725876,1.0) (133.759013,1.0) }; 
+% GPU frame: 5
+\addplot[geomStyleOne] coordinates{ (113.869792,1.75) (133.533056,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (133.693792,2) (133.864448,2) }; 
+\addplot[presStyleOne] coordinates{ (153.775584,1.75) (153.797152,1.75) }; 
 
-% CPU frame: 1005
-\addplot[geomStyle2] coordinates{ (461.624429,1.1) (462.060490,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (462.130576,1.1) (462.149344,1.1) }; 
-\addplot[presStyle2] coordinates{ (462.425291,1.1) (462.443179,1.1) }; 
-% GPU frame: 1005
-\addplot[geomStyle2] coordinates{ (462.127712,1.75) (462.314528,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (462.562400,2) (462.563424,2) }; 
-\addplot[presStyle2] coordinates{ (462.867808,1.75) (462.891168,1.75) }; 
+% CPU frame: 6
+\addplot[geomStyleTwo] coordinates{ (113.949760,1.1) (114.715726,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (114.813964,1.1) (115.206625,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (153.965912,1.1) (153.996703,1.1) }; 
+% GPU frame: 6
+\addplot[geomStyleTwo] coordinates{ (133.558048,1.75) (153.754656,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (153.969248,2) (154.063904,2) }; 
+\addplot[presStyleTwo] coordinates{ (154.840416,1.75) (154.864320,1.75) }; 
 
-% CPU frame: 1006
-\addplot[geomStyle0] coordinates{ (462.154622,0.9) (462.544350,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (462.675726,0.9) (462.693321,0.9) }; 
-\addplot[presStyle0] coordinates{ (463.032316,0.9) (463.049325,0.9) }; 
-% GPU frame: 1006
-\addplot[geomStyle0] coordinates{ (462.658720,1.75) (462.849184,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (463.020032,2) (463.094144,2) }; 
-\addplot[presStyle0] coordinates{ (463.182240,1.75) (463.205408,1.75) }; 
+% CPU frame: 7
+\addplot[geomStyleZero] coordinates{ (153.948024,0.9) (154.594051,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (156.781981,0.9) (157.233877,0.9) }; 
+\addplot[presStyleZero] coordinates{ (174.735556,0.9) (174.773678,0.9) }; 
+% GPU frame: 7
+\addplot[geomStyleZero] coordinates{ (155.051072,1.75) (174.535264,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (174.685312,2) (174.856128,2) }; 
+\addplot[presStyleZero] coordinates{ (193.709376,1.75) (193.732928,1.75) }; 
 
-% CPU frame: 1007
-\addplot[geomStyle1] coordinates{ (463.101523,1.0) (463.501221,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (463.605325,1.0) (463.628784,1.0) }; 
-\addplot[presStyle1] coordinates{ (463.975111,1.0) (463.996225,1.0) }; 
-% GPU frame: 1007
-\addplot[geomStyle1] coordinates{ (463.674528,1.75) (463.861312,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (464.096320,2) (464.097152,2) }; 
-\addplot[presStyle1] coordinates{ (464.391200,1.75) (464.414016,1.75) }; 
+% CPU frame: 8
+\addplot[geomStyleOne] coordinates{ (156.824209,1.0) (157.640614,1.0) }; 
+\addplot[fxaaStyleOne] coordinates{ (157.736506,1.0) (158.134151,1.0) }; 
+\addplot[presStyleOne] coordinates{ (193.882653,1.0) (193.918723,1.0) }; 
+% GPU frame: 8
+\addplot[geomStyleOne] coordinates{ (174.560672,1.75) (193.688864,1.75) }; 
+\addplot[fxaaStyleOne] coordinates{ (193.835904,2) (193.930720,2) }; 
+\addplot[presStyleOne] coordinates{ (194.040544,1.75) (194.064128,1.75) }; 
 
-% CPU frame: 1008
-\addplot[geomStyle2] coordinates{ (463.617055,1.1) (464.012061,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (464.087719,1.1) (464.100329,1.1) }; 
-\addplot[presStyle2] coordinates{ (464.544307,1.1) (464.562196,1.1) }; 
-% GPU frame: 1008
-\addplot[geomStyle2] coordinates{ (464.179232,1.75) (464.371712,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (464.533728,2) (464.606912,2) }; 
-\addplot[presStyle2] coordinates{ (464.693760,1.75) (464.716768,1.75) }; 
+% CPU frame: 9
+\addplot[geomStyleTwo] coordinates{ (193.882653,1.1) (194.567096,1.1) }; 
+\addplot[fxaaStyleTwo] coordinates{ (194.663575,1.1) (195.033948,1.1) }; 
+\addplot[presStyleTwo] coordinates{ (214.054948,1.1) (214.135592,1.1) }; 
+% GPU frame: 9
+\addplot[geomStyleTwo] coordinates{ (194.648896,1.75) (213.895200,1.75) }; 
+\addplot[fxaaStyleTwo] coordinates{ (214.032832,2) (214.203776,2) }; 
+\addplot[presStyleTwo] coordinates{ (232.980576,1.75) (233.004576,1.75) }; 
 
-% CPU frame: 1009
-\addplot[geomStyle0] coordinates{ (464.521141,0.9) (464.936968,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (465.021130,0.9) (465.038725,0.9) }; 
-\addplot[presStyle0] coordinates{ (465.302649,0.9) (465.318778,0.9) }; 
-% GPU frame: 1009
-\addplot[geomStyle0] coordinates{ (465.003584,1.75) (465.189728,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (465.292160,2) (465.293280,2) }; 
-\addplot[presStyle0] coordinates{ (465.574496,1.75) (465.601568,1.75) }; 
-
-% CPU frame: 1010
-\addplot[geomStyle1] coordinates{ (465.031687,1.0) (465.059839,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (465.135204,1.0) (465.150453,1.0) }; 
-\addplot[presStyle1] coordinates{ (465.765396,1.0) (465.786510,1.0) }; 
-% GPU frame: 1010
-\addplot[geomStyle1] coordinates{ (465.212320,1.75) (465.446144,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (465.519776,2) (465.614592,2) }; 
-\addplot[presStyle1] coordinates{ (465.851200,1.75) (465.874176,1.75) }; 
-
-% CPU frame: 1011
-\addplot[geomStyle2] coordinates{ (465.766569,1.1) (465.795014,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (465.922284,1.1) (465.941345,1.1) }; 
-\addplot[presStyle2] coordinates{ (466.192952,1.1) (466.208788,1.1) }; 
-% GPU frame: 1011
-\addplot[geomStyle2] coordinates{ (465.904544,1.75) (466.091744,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (466.182496,2) (466.256384,2) }; 
-\addplot[presStyle2] coordinates{ (466.487648,1.75) (466.510560,1.75) }; 
-
-% CPU frame: 1012
-\addplot[geomStyle0] coordinates{ (466.179170,0.9) (466.208495,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (466.295003,0.9) (466.312305,0.9) }; 
-\addplot[presStyle0] coordinates{ (466.612005,0.9) (466.627841,0.9) }; 
-% GPU frame: 1012
-\addplot[geomStyle0] coordinates{ (466.278016,1.75) (466.469408,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (466.601312,2) (466.675072,2) }; 
-\addplot[presStyle0] coordinates{ (466.901056,1.75) (466.924160,1.75) }; 
-
-% CPU frame: 1013
-\addplot[geomStyle1] coordinates{ (466.595583,1.0) (466.620509,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (466.696754,1.0) (466.710830,1.0) }; 
-\addplot[presStyle1] coordinates{ (466.989416,1.0) (467.004959,1.0) }; 
-% GPU frame: 1013
-\addplot[geomStyle1] coordinates{ (466.690688,1.75) (466.882464,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (466.972096,2) (467.045056,2) }; 
-\addplot[presStyle1] coordinates{ (467.306592,1.75) (467.329440,1.75) }; 
-
-% CPU frame: 1014
-\addplot[geomStyle2] coordinates{ (467.007305,1.1) (467.034870,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (467.104077,1.1) (467.119619,1.1) }; 
-\addplot[presStyle2] coordinates{ (467.428996,1.1) (467.445712,1.1) }; 
-% GPU frame: 1014
-\addplot[geomStyle2] coordinates{ (467.096704,1.75) (467.288576,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (467.418176,2) (467.491552,2) }; 
-\addplot[presStyle2] coordinates{ (467.738912,1.75) (467.761728,1.75) }; 
-
-% CPU frame: 1015
-\addplot[geomStyle0] coordinates{ (467.415507,0.9) (467.441606,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (467.520783,0.9) (467.536325,0.9) }; 
-\addplot[presStyle0] coordinates{ (467.828108,0.9) (467.845703,0.9) }; 
-% GPU frame: 1015
-\addplot[geomStyle0] coordinates{ (467.530592,1.75) (467.720768,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (467.809664,2) (467.882656,2) }; 
-\addplot[presStyle0] coordinates{ (468.158304,1.75) (468.181280,1.75) }; 
-
-% CPU frame: 1016
-\addplot[geomStyle1] coordinates{ (467.850981,1.0) (467.877667,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (467.957431,1.0) (467.973560,1.0) }; 
-\addplot[presStyle1] coordinates{ (468.247161,1.0) (468.262996,1.0) }; 
-% GPU frame: 1016
-\addplot[geomStyle1] coordinates{ (467.949120,1.75) (468.140192,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (468.228544,2) (468.301792,2) }; 
-\addplot[presStyle1] coordinates{ (468.579936,1.75) (468.603264,1.75) }; 
-
-% CPU frame: 1017
-\addplot[geomStyle2] coordinates{ (468.268861,1.1) (468.296720,1.1) }; 
-\addplot[fxaaStyle2] coordinates{ (468.376777,1.1) (468.392026,1.1) }; 
-\addplot[presStyle2] coordinates{ (468.670026,1.1) (468.687327,1.1) }; 
-% GPU frame: 1017
-\addplot[geomStyle2] coordinates{ (468.369184,1.75) (468.561888,1.75) }; 
-\addplot[fxaaStyle2] coordinates{ (468.647328,2) (468.721312,2) }; 
-\addplot[presStyle2] coordinates{ (468.995616,1.75) (469.018784,1.75) }; 
-
-% CPU frame: 1018
-\addplot[geomStyle0] coordinates{ (468.687620,0.9) (468.714013,0.9) }; 
-\addplot[fxaaStyle0] coordinates{ (468.794070,0.9) (468.809905,0.9) }; 
-\addplot[presStyle0] coordinates{ (469.082920,0.9) (469.099635,0.9) }; 
-% GPU frame: 1018
-\addplot[geomStyle0] coordinates{ (468.786528,1.75) (468.977376,1.75) }; 
-\addplot[fxaaStyle0] coordinates{ (469.062912,2) (469.136768,2) }; 
-\addplot[presStyle0] coordinates{ (469.405376,1.75) (469.428608,1.75) }; 
-
-% CPU frame: 1019
-\addplot[geomStyle1] coordinates{ (469.102568,1.0) (469.126907,1.0) }; 
-\addplot[fxaaStyle1] coordinates{ (469.203152,1.0) (469.217228,1.0) }; 
-\addplot[presStyle1] coordinates{ (469.489656,1.0) (469.505198,1.0) }; 
-% GPU frame: 1019
-\addplot[geomStyle1] coordinates{ (469.195200,1.75) (469.387104,1.75) }; 
-\addplot[fxaaStyle1] coordinates{ (469.474016,2) (469.547680,2) }; 
-\addplot[presStyle1] coordinates{ (469.809376,1.75) (469.832448,1.75) }; 
+% CPU frame: 10
+\addplot[geomStyleZero] coordinates{ (194.679703,0.9) (195.356228,0.9) }; 
+\addplot[fxaaStyleZero] coordinates{ (195.439804,0.9) (195.456813,0.9) }; 
+\addplot[presStyleZero] coordinates{ (233.223746,0.9) (233.259816,0.9) }; 
+% GPU frame: 10
+\addplot[geomStyleZero] coordinates{ (213.920288,1.75) (232.960448,1.75) }; 
+\addplot[fxaaStyleZero] coordinates{ (233.161120,2) (233.253984,2) }; 
+\addplot[presStyleZero] coordinates{ (233.354464,1.75) (233.377824,1.75) }; 
 
